--- a/campaigns/templates/campaigns/admin_dashboard.html
+++ b/campaigns/templates/campaigns/admin_dashboard.html
@@ -31,6 +31,12 @@
             <a href="{% url 'admin_users' %}" class="btn btn-outline-dark">
                 <i class="fas fa-users"></i> Manage Users
             </a>
+            <a href="{% url 'day1_followup' %}" class="btn btn-outline-info">
+                <i class="fas fa-phone"></i> Day 1 Follow-ups
+            </a>
+            <a href="{% url 'day2_followup' %}" class="btn btn-outline-warning">
+                <i class="fas fa-phone-alt"></i> Day 2 Follow-ups
+            </a>
             <a href="#" id="admin-generate-report" class="btn btn-outline-success">
                 <i class="fas fa-paper-plane"></i> Generate Report
             </a>
