--- a/campaigns/templates/campaigns/followup_table.html
+++ b/campaigns/templates/campaigns/followup_table.html
@@ -8,18 +8,19 @@
                 <i class="fas fa-phone"></i> {{ title }}
             </h1>
             <div class="d-flex align-items-center gap-2">
-                <a href="{% url 'admin_dashboard' %}" class="btn btn-outline-primary">
+                <a href="{% url 'dashboard' %}" class="btn btn-outline-primary">
                     <i class="fas fa-arrow-left"></i> Back to Dashboard
                 </a>
                 {% if followup_type == 'day1' %}
-                <a href="{% url 'day2_followup' %}" class="btn btn-outline-warning">
+                <a href="{% url 'user_day2_followup' %}" class="btn btn-outline-warning">
                     <i class="fas fa-arrow-right"></i> Day 2 Follow-ups
                 </a>
-                {% elif followup_type == 'day2' %}
-                <a href="{% url 'day1_followup' %}" class="btn btn-outline-info">
+            {% elif followup_type == 'day2' %}
+                <a href="{% url 'user_day1_followup' %}" class="btn btn-outline-info">
                     <i class="fas fa-arrow-left"></i> Day 1 Follow-ups
                 </a>
-                {% endif %}
+            {% endif %}
+            
             </div>
         </div>
 
